fix review controller documentation(can input json)
